# taskmaster-sync

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TEST_AGENT_PROMPT.md  action.yml  project_data.json
.cursor/: mcp.json
.github/workflows/: ci.yml  example-usage.yml.example  release.yml  taskmaster-sync.yml
.taskmaster/: agent-github-mapping.json  state.json  sync-state-master.json  sync-state-test.json
.taskmaster/docs/: task-master-sync-prd.txt
.taskmaster/snapshots/: master-snapshot.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  tasks.json  test-clean.json  test-single.json
docs/: BUILD_OPTIMIZATION.md  GITHUB_ACTION_PUBLISHING.md  MONOREPO_SYNC_STRATEGY.md  cursor_close_issues_and_prepare_for_tes.md  github-cli-authentication-methodology.md  github-projects-api-reference.md  regression-testing-process.md
scripts/: ensure-github-auth.sh  full-regression-test.sh  pre-commit.sh  regression-test.sh  setup-hooks.sh
src/: auth.rs  config.rs  delta.rs  error.rs  fields.rs  github.rs  lib.rs  main.rs  progress.rs  state.rs  subtasks.rs  sync.rs  taskmaster.rs  watcher.rs
src/models/: config.rs  github.rs  mod.rs  task.rs
tests/: assignee_field_test.rs  config_integration.rs  debug_graphql.rs  github_integration.rs  state_integration.rs  sync_integration.rs
